alignment fix

--- a/poem.css
+++ b/poem.css
@@ -133,7 +133,8 @@ ul, li {
   }
 
   .container {
-   width: auto;
+   margin-left: auto;
+   margin-right: auto;
   }
   .main {
     margin-top: 2rem;
